all paper summaries are now added - ready for proof reading

--- a/paper-107.tex
+++ b/paper-107.tex
@@ -3,11 +3,10 @@
 % paper # 107 Rahul
 % -----------------------------------
 
-\ \hline \ % to be removed before submission
+%\ \hline \ % to be removed before submission
 
 Leavens, Naumann, Rajan, and Aotani
 \cite{isola-2016-leavens}
 ({\em Specifying and Verifying Advanced Control Features})
-present ...
+discuss the problem of verifying models and programs that are written with design patterns such as higher-order functions, advice, and context dependence. Such concepts allow for greater modularity and expressibility of models, but tend to be harder to verify. They propose the use of Greybox specifications and techniques for verification of such models and programs. 
 
-\red{Rahul}
