--- a/paper-110.tex
+++ b/paper-110.tex
@@ -3,7 +3,7 @@
 % paper # 110 Klaus
 % -----------------------------------
 
-\ \hline \ % to be removed before submission
+%\ \hline \ % to be removed before submission
 
 Kugler
 \cite{isola-2016-kugler}
@@ -19,4 +19,4 @@ making models amendable to formal and scalable reasoning,
 using visual languages, combining different programming
 languages, rapid prototyping, and program synthesis.
 
-\done{}
+
