--- a/paper-122.tex
+++ b/paper-122.tex
@@ -3,7 +3,7 @@
 % paper # 122 Klaus
 % -----------------------------------
 
-\ \hline \ % to be removed before submission
+%\ \hline \ % to be removed before submission
 
 The panel section started with a presentation by
 Broy, Havelund, and Kumar
@@ -20,4 +20,3 @@ unify modeling and programming. They specifically highlight
 the need to combine textual and visual languages, the need for
 allowing definition of domain-specific languages, and the need for analysis support.
 
-\done{}
