--- a/paper-41.tex
+++ b/paper-41.tex
@@ -4,7 +4,7 @@
 % paper # 41 Bernhard
 % -----------------------------------
 
-\ \hline \ % to be removed before submission
+%\ \hline \ % to be removed before submission
 
 Rybicki, Smyth, Motika,Schulz-Rosengarten, and Hanxleden
 \cite{isola-2016-rybicki}
@@ -14,4 +14,3 @@ present an extension of the Kieler development framework, which further strength
 %can be merely turned into a matter of perspective. 
 At the practical side this illustrates the maturity of Eclipse's meta-modeling facilities, which, in the meantime, can effectively be used to integrate domain-specific languages into a development framework.
 
-\done{}
