--- a/paper-89.tex
+++ b/paper-89.tex
@@ -3,7 +3,7 @@
 % paper # 89 Klaus
 % -----------------------------------
 
-\ \hline \ % to be removed before submission
+%\ \hline \ % to be removed before submission
 
 Haxthausen and Peleska
 \cite{isola-2016-haxthausen}
@@ -16,5 +16,5 @@ mentioned is that multiple stake holders will not be able to agree
 on a formalism. The multi-formalism approachrequires to translate verification artifacts between different 
 representations. It is illustratedby means of a case study from the railway domain, how this can beachieved, using concepts from the theory of institutions, formalized in category theory. 
 
-\done{}
+
 
