--- a/paper-95.tex
+++ b/paper-95.tex
@@ -3,10 +3,9 @@
 % paper # 95 Manfred
 % -----------------------------------
 
-\ \hline \ % to be removed before submission
+%\ \hline \ % to be removed before submission
 
 Elaasar and Badreddin
 \cite{isola-2016-elaasar}
 ({\em Modeling Meets Programming: A Comparative Study inModel Driven Engineering Action Languages})
 compare two approaches, Alf and Umple, where modeling meets programming. They start from the remark that modeling and programming have often been considered two different domains. They point out, that this is true when modeling is primarily meant for human communication, but is not the case when modeling is meant for execution. In their papers they discuss two approaches that specifically address execution. In particular they consider the language Alf, that has evolved from the modeling community to make models executable, and Umple, that has evolved from the academic community to introduce abstractions of modeling into programming languages. The paper discusses critical differences, and ideas for future evolution of model oriented programming languages. 
-\done{}
