--- a/paper-103.tex
+++ b/paper-103.tex
@@ -3,11 +3,11 @@
 % paper # 103 Rahul
 % -----------------------------------
 
-\ \hline \ % to be removed before submission
+%\ \hline \ % to be removed before submission
 
 Lattmann, Kecsk\'{e}s, Meijer,Karsai, V\"{o}lgyesi, and L\'{e}deczi
 \cite{isola-2016-lattmann}
 ({\em Abstractions for Modeling Complex Systems})
-present ...
+present three abstraction methods for improving the scalability of the modeling process and the system models themselves. The abstractions, crosscuts, model libraries, and mixins, are part of the WebGME framework, and the paper describes how these abstractions are incorporated into this framework.
 
-\red{Rahul}
+
