--- a/paper-104.tex
+++ b/paper-104.tex
@@ -3,7 +3,7 @@
 % paper # 104 Klaus
 % -----------------------------------
 
-\ \hline \ % to be removed before submission
+%\ \hline \ % to be removed before submission
 
 Rouquette
 \cite{isola-2016-rouquette}
@@ -17,4 +17,4 @@ model as tabular instance of that schema.
 He finally suggests leveraging recent advances in functional programming languages, such as Scala, in order 
 to modernize the traditional practice of model-basedprogramming with the Object Constraint Language (OCL) and theQuery/View/Transformation (QVT) standards. 
 
-\done{}
+
