--- a/paper-106.tex
+++ b/paper-106.tex
@@ -3,7 +3,7 @@
 % paper # 106 Manfred
 % -----------------------------------
 
-\ \hline \ % to be removed before submission
+%\ \hline \ % to be removed before submission
 
 Seidewitz
 \cite{isola-2016-seidewitz}
@@ -11,4 +11,3 @@ Seidewitz
 considers a unified view of modeling and programming. 
 Seidewitz takes the position that some software models specify behavior precisely enough that they can be executed, and that all programs can be considered models, at least of the execution they specify. He concludes that modeling and programming are actually not so different after all, and there might be conversions.  He claims that the language design legacy of UML is largely grounded on the old view of sharply separating models and programs, complicating their future convergence, and that it is perhaps time to move forward in the direction of new generations of unified modeling and programming languages.
 
-\done{}
