--- a/paper-91.tex
+++ b/paper-91.tex
@@ -3,11 +3,11 @@
 % paper # 91 Rahul
 % -----------------------------------
 
-\ \hline \ % to be removed before submission
+%\ \hline \ % to be removed before submission
 
 Lethbridge, Abdelzad, Orabi, Orabi, and Adesina
 \cite{isola-2016-lethbridge}
 ({\em Merging Modeling and Programming using Umple})
-present Umple, a programming and modeling language that has been created by introducing modeling constructs in programming and vice-versa. Umple aims at maintaining model-code and text-diagram duality. Several examples and uses of Umple are provided with a braod discussion.
+present Umple, a programming and modeling language that has been created by introducing modeling constructs in programming and vice-versa. Umple aims at maintaining model-code and text-diagram duality. Several examples and uses of Umple are provided with a broad discussion.
 
-\red{Rahul}
+
