--- a/paper-93.tex
+++ b/paper-93.tex
@@ -3,7 +3,7 @@
 % paper # 93 Klaus
 % -----------------------------------
 
-\ \hline \ % to be removed before submission
+%\ \hline \ % to be removed before submission
 
 Larsen, Fitzgerald, Woodcock, Nilsson, Gamble, and Foster
 \cite{isola-2016-larsen}
@@ -13,4 +13,3 @@ cyber-physical systems best can be done using multiple
 formalisms. A case study of a small unmannedaerial vehicle is used to demonstrate the need for multiple formalisms, namely a formalism for defining control, in this case VDM-RT, and a formalism for continuous behavior defined by differential equations, in this case 20-sim. The integration is founded in the semantic framework of Unifying Theories of Programming (UTP). Combined systems are suggested simulated via
 a co-simulation framework.
 
-\done{}
