made a couple of rewordings

--- a/paper-107.tex
+++ b/paper-107.tex
@@ -8,5 +8,5 @@
 Leavens, Naumann, Rajan, and Aotani
 \cite{isola-2016-leavens}
 ({\em Specifying and Verifying Advanced Control Features})
-discuss the problem of verifying models and programs that are written with design patterns such as higher-order functions, advice, and context dependence. Such concepts allow for greater modularity and expressibility of models, but tend to be harder to verify. They propose the use of Greybox specifications and techniques for verification of such models and programs. 
+discuss the problem of verifying programs that are written with design patterns such as higher-order functions, advice, and context dependence. Such concepts allow for greater modularity and programming convenience, but tend to be harder to verify. They propose the use of Greybox specifications and techniques for verification of such programs. 
 
