--- a/paper-94.tex
+++ b/paper-94.tex
@@ -8,5 +8,5 @@
 Elmqvist, Henningsson, and Otter
 \cite{isola-2016-elmqvist}
 ({\em Systems Modeling and Programming in aUnified Environment based on Julia})
-present a new methodology for modeling cyber physical systems using a Modelica-like language, that also has the powerful features of Julia -- a language they call Modia. A good discussion is provided by the authors regarding the needs of a Model Based Systems Engineering approach along with a strong description of the features and implementation of the Modia language. Examples and illustrations are also provided in great detail.
+present a new methodology for modeling cyber physical systems using a Modelica-like extension of the powerful Julia programming language -- a language extension they call Modia. A good discussion is provided by the authors regarding the needs of a Model Based Systems Engineering approach, along with a strong description of the features and implementation of the Modia language. Examples and illustrations are also provided in great detail.
 
