made edits for Bernhard

--- a/contributions.tex
+++ b/contributions.tex
@@ -11,7 +11,7 @@ The paper contributions in this track are introduced below. The papers are order
 (5) ​tools and frameworks view​, and 
 (6) panel​​.
 %
-Within each track the papers are ordered according to provide
+Within each track the papers are ordered to provide
 a natural flow of presentations. 
 
 \subsection{Opinions}
