--- a/paper-41.tex
+++ b/paper-41.tex
@@ -9,7 +9,7 @@
 Rybicki, Smyth, Motika,Schulz-Rosengarten, and Hanxleden
 \cite{isola-2016-rybicki}
 ({\em Interactive Model-Based Compilation ContinuedIncremental Hardware Synthesis for SCCharts})
-present an extension of the Kieler development framework, which further strengthens its meta-modeling-based approach for stepwise translating high level descriptions to hardware. Remarkable is its user-orientation: not only can the effect of the (M2M) transformations steps be controlled via sophisticated graphical visualization, but also subsequent simulation runs can be followed at each of the intermediate levels. Thus Kieler can be regarded as a framework where models are ``morphed'' to programs and even hardware  by automatic transformation. 
+present an extension of the Kieler development framework, which further strengthens its meta-modeling based approach for stepwise translating high level descriptions to hardware. Remarkable is its user-orientation: not only can the effect of the (M2M) transformations steps be controlled via sophisticated graphical visualization, but also subsequent simulation runs can be followed at each of the intermediate levels. Thus Kieler can be regarded as a framework where models are ``morphed'' to programs and even hardware  by automatic transformation. 
 %an impressive illustration of how the model/program/system distinction 
 %can be merely turned into a matter of perspective. 
 At the practical side this illustrates the maturity of Eclipse's meta-modeling facilities, which, in the meantime, can effectively be used to integrate domain-specific languages into a development framework.
