--- a/introduction.tex
+++ b/introduction.tex
@@ -43,11 +43,11 @@ standard defining UML is much larger than the definition of any
 formal method or programming language), are incomplete (the UML
 standard for example has no expression-language, although OCL is
 a recommended add-on), and they lack commonly agreed up semantics. 
-To some extent one can argue, that this community is in need of a 
+One may well argue that there is a need for a 
 well-defined non-graphical representation of the abstract syntax
 of UML, in order for the language community to provide 
 semantics. We know how to give semantics to abstract syntax
-represented as text, we do not have much experience (as a community) in giving semantics to two-dimensional languages without first reducing to such abstract syntax.
+represented as text, we do not have much experience in giving semantics to two-dimensional languages without first reducing to such abstract syntax.
 %
 Many attempts have been made to give semantics to parts of UML,
 and they all start by first defining an abstract syntax for the
