uploaded Bernhard's latests edits

--- a/bib.bib
+++ b/bib.bib
@@ -250,10 +250,10 @@ TRACK PAPERS:
 
 123:
 @inproceedings{isola-2016-steffen,
-  author    = {Bernhard Steffen and Stfan Naujokat},
-  title     = {Conceptual Unification of
-               Modeling and Programming:
-               A Continuous Improvement Approach},
+  author = {Stefan Naujokat and Johannes Neubauer and Tiziana 
+            Margaria and Bernhard Steffen},
+  title = {Meta-Level Reuse for Mastering Domain 
+           Specialization},
   booktitle = {7th International Symposium On 
                Leveraging Applications of Formal Methods, 
                Verification and Validation, ISoLA 2016,
@@ -268,8 +268,6 @@ TRACK PAPERS:
 =============
 OTHER PAPERS:
 =============
-
-
 
 @misc{mathematica,
   title = {{Mathematica}},
