--- a/paper-123.tex
+++ b/paper-123.tex
@@ -5,9 +5,26 @@
 
 %\ \hline \ % to be removed before submission
 
-Steffen and Naujokat
-\cite{isola-2016-steffen}
-({\em Conceptual Unification of Modeling and Programming:
-A Continuous Improvement Approach})
-reflect on the distinction between modeling and programming  in terms of `what' and `how' in order to, in particular, emphasize the importance of perspectives: what is a model (a `what') for the one, may well be a program (a `how') for the other. In fact, attempts to pinpoint technical criteria like executability or abstraction for this distinction seem not to survive modern technical developments. Rather, the underlying conceptual cores seem to converge. What remains is the `what'/`how' distinction, i.e. the separation of the true purpose from its realization, or the possibility of formulating the primary intent without being forced to over-specification. The paper argues that no one language can adequately support this distinction in general and proposes a meta-level framework for mastering the wealth of required domain-specific languages.
-
+Naujokat, Neubauer, Margaria, and Steffen 
+\cite{isola-2016-steffen} ({\em Meta-Level Reuse for Mastering 
+Domain Specialization}) reflect on the distinction between modeling 
+and programming in terms of {\textsc{what}}{} and {\textsc{how}}{}, 
+and emphasize the importance of perspectives: what is a model (a 
+{\textsc{what}}{}) for the one, may well be a program (a 
+{\textsc{how}}{}) for the other. In fact, attempts to pinpoint 
+technical criteria like executability or abstraction for clearly 
+separating modeling from programming seem not to survive modern 
+technical developments. Rather, the underlying conceptual cores 
+continuously converge. 
+% ---
+What remains is the distinction of 
+{\textsc{what}}{} and {\textsc{how}}{}, separating true purpose 
+from its realization, i.e. providing the possibility of 
+formulating the primary intent without being forced to 
+over-specify. 
+% ---
+The paper 
+argues that no unified general-purpose language can adequately 
+support this distinction in general, and propose a meta-level 
+framework for mastering the wealth of required domain-specific 
+languages.
